# FontSync

./: .dockerignore  .gitignore  ARCHITECTURE.md  CLAUDE.md  DEVELOPMENT.md  Dockerfile  Dockerfile.prod  Dockerfile.prod.dockerignore  PLAN-PUBLICATION.md  PLAN.md  README.md  ROADMAP.md  SPECS.md  docker-compose.nas.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: docker-publish.yml  release.yml
agent/: __main__.py  config.py  discovery.py  font_installer.py  hash_cache.py  hashing.py  launchd_setup.py  listen_command.py  main.py  notifier.py  paths.py  requirements.txt  scanner.py  sync_client.py  sync_command.py  tray.py
agent/launchd/: com.fontsync.listen.plist  com.fontsync.sync.plist  install.sh
alembic/: env.py
alembic/versions/: 23e4bc1a6af9_create_mvp_tables_fonts_devices_device_.py  6337aca5b56a_add_auto_push_to_devices.py  c83de22fb795_add_activated_to_device_fonts.py  fbca947b83c5_baseline_sqlite_schema.py  fec956d2e959_add_font_families_and_font_family_.py
backend/: auth.py  config.py  database.py  main.py
backend/models/: __init__.py  base.py  device.py  device_font.py  font.py  font_family.py  sync_queue.py
backend/routers/: agent_events.py  devices.py  font_families.py  fonts.py  stats.py  sync.py  ws.py
backend/schemas/: base.py  device.py  font.py  font_family.py  sync.py
backend/services/: family_grouper.py  font_analyzer.py  font_importer.py  storage.py  sync_manager.py  ws_manager.py
docs/: INSTALL-NAS.md  RELEASE.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
frontend/src/: App.vue  main.ts
macos-app/: .gitignore  FontSync.entitlements  Info.plist  PythonAgent.entitlements  README.md  RELEASE.md
macos-app/FontSync/: AgentController.swift  AppConfig.swift  AppModel.swift  FontSyncApp.swift  LaunchdStatus.swift  MenuContent.swift  NotificationManager.swift  Updater.swift  (+4 more)
macos-app/FontSync.xcodeproj/: project.pbxproj
scripts/: build-agent-venv.sh  build_agent.sh  deploy.sh  docker-entrypoint.sh  entitlements.plist  publish-release.sh  release-macos-app.sh  test_ws.py
(+100 files in other folders)
